--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body> 
     <h1>John Doe</h1>
-   <a href = "../Quote/Quote/quote.html"> <img src ="./image/ErnstHackel.jpeg" ></a>
+   <a href = "./Quote/Quote/quote.html"> <img src ="./image/ErnstHackel.jpeg" ></a>
     <hr noshade/>
     <h2 class = "key">Summary</h2>
     <p>I am dedicated to my work and fullfill my all the responsbilites of our company. I will try my best and never give any chances of complaint.</p>
